--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>scroll-container</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+    <script src="../node_modules/vconsole/dist/vconsole.min.js"></script>
+    <style>
+      body, html {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        background: white;
+      }
+
+    </style>
   </head>
   <body>
     <noscript>
